templateDraft2.css
body, html{
	font-family: Verdana, Geneva, sans-serif;
	height: 100%;
}

.blue{
	color: #0681C5;
}

.dark-blue{
	color: #061d68;
}

.purple{
	color: #a44499;
}

.gray{
	color: #808080;
}

.dark-gray{
	color: #636466;
}

.black{
	color: #000;
}

.page-header{
	color: #0681C5;
	text-align: center;
}

.wrapper{
	position: relative;
	width: 860px;
	margin: 20px auto;
	min-height: 100%;

}

.page-header h1{
	font-size: 28px;
}

.page-header h2{
	font-size: 24px;
}

.page-header h3{
	font-size: 18px;
}

.question-description {
	font-size: 12px;
	margin: 20px auto 10px auto;
}

/*
Title Page 1 Specs
*/
.title-page-img{
    width: 144px;
    height: auto;
    margin: 40px auto;
}

.title-page1 p{
	font-weight: normal;
	font-size: 20px;
	width:80%;
	margin: 20px auto 0px auto;
}

.title-page-meta{
	margin-top: 100px;
}

.title-page-meta p{
	font-size: 14px;
}

/*
Intro Page2 
&
Text Frame Page3 Specs 
*/

.frame-header{
	font-size: 20px;
	font-weight: normal;
}
.frame{
	margin: 0 auto;
	width: 81%;
	height: 400px;
	padding: 20px;
	border:thin solid #cccccc;
}

.frame .content{
	font-size: 15px;
}

.frame p ul,
.frame p li{
	display: inline;
	margin:0; padding:0;
}


/*
Weave Included Page4
*/
.frame-subhead{
	font-size: 16px; 
}

.weave-content li{

}


/*
Appendix Page 5 Specs
*/

.appendix .page-header h1{
	letter-spacing: 7px;
}

.appendix .page-header h2, h3{
	margin: 0;
}

.appendix .page-header h3{
	font-size: 12px;
}

.appendix .page-header h4{
	font-size: 20px;
}

/*data-sources*/
.source h1, .source h2,
.source h3, .source h4,
.source h5{
	margin:0;
}

.appendix .data-sources h5{
	font-weight: normal;
	font-size: 13px;
}

.source{
	display: inline-block;

}

.source .source-pic{
	float: left;
	width: 50px;
	height: 50px;	
	overflow: hidden;
	margin-right: 20px;
}

.source .source-label{
	float: left;
}

/*related-terms*/
.appendix .related-terms h4{
	color: #11b258;
}

.appendix .related-terms h5{
	font-weight: normal;
}

.appendix .related-terms ul{
	list-style-type: none;	
}

.appendix .related-terms ul h4{
	color: #87c879;	
}

.appendix .related-terms ul li ul{
	margin-top: -20px;
	font-size: 13px;	
}

.appendix .related-terms ul li ul li{
	line-height: 25px;
	color: #636466;	
}


/*related-stories*/
.story h1, .story h2,
.story h3, .story h4,
.story h5, .story h6{
	margin: 0;
} 

.story{
	display: inline-block;
}

.story h4, h5{
	font-weight: normal;
}

.story .story-pic{
	float: left;
	width: 140px;
	height: 140px;	
	overflow: hidden;
	margin: 0px 50px 30px 0px;
}

.story .story-pic{
	float: left;
}

.story .story-label{
	width: 860px;
	margin-top: 45px;
}

/*
Footer Specs
*/
.page-number{
	width:100%;
	text-align: center;
	font-size: 8px;
	margin-top: 15px;
}

#footer{
	/*display: none;*/
	position: absolute;
	bottom: 15px;
	width: 860px;
	height: 30px;
	padding-bottom: 30px;
	color: #000;
	font-size: 8px;
	text-align: left;
} 

#footer .content{
	float:left;
}

.hub-logo{
	float:right;
	width:110px;
}

@media all {
	.page-break	{ 
		display: none; 
	}
}

@media print {
	.page-break	{ 
		display: block; 
		page-break-before: always; 
	}
}

